@@ -78,7 +78,7 @@ static char *getSfcbUuid()
       else {
          char hostName[512];
          gethostname(hostName,511);
-         char *u=(char*)alloca(strlen(hostName)+32);
+         char *u=(char*)malloc(strlen(hostName)+32);
          strcpy(u,"sfcb:NO-UUID-FILE-");
          strcat(u,hostName);
          return u;
@@ -371,8 +371,9 @@ static CMPIStatus ObjectManagerProviderEnumInstances(CMPIInstanceMI * mi,
    str[0]=0;
    gethostname(str,511);
    CMSetProperty(ci,"SystemName",str,CMPI_chars);
+   char *name=getSfcbUuid();
    CMSetProperty(ci,"Name",getSfcbUuid(),CMPI_chars);
-   
+   free(name);
    CMSetProperty(ci,"GatherStatisticalData",&bul,CMPI_boolean);
    CMSetProperty(ci,"ElementName","sfcb",CMPI_chars);
    CMSetProperty(ci,"Description",PACKAGE_STRING,CMPI_chars);
