@@ -46,6 +46,7 @@ Bugs fixed:
 - 1618258 Fixed slp problems when ssl is enabled
 - 1616130 Fixed bad message during shutdown
 - 1620005 Fixed unnecessary fork when slp is enabled
+- 1620020 Fixed allocation error in interopServerProvider
 
 Changes in 1.1.1
 ================
